deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "2"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{"deployment.kubernetes.io/revision":"2"},"creationTimestamp":"2024-02-20T11:49:18Z","generation":2,"labels":{"app":"pacman"},"name":"pacman","namespace":"pacman","resourceVersion":"23845","uid":"e7bf6912-24d8-4969-ad35-7436070d892f"},"spec":{"progressDeadlineSeconds":600,"replicas":3,"revisionHistoryLimit":10,"selector":{"matchLabels":{"app":"pacman"}},"strategy":{"rollingUpdate":{"maxSurge":"25%","maxUnavailable":"25%" [...]
  creationTimestamp: "2024-02-20T11:49:18Z"
  generation: 3
  labels:
    app: pacman
  name: pacman
  uid: e7bf6912-24d8-4969-ad35-7436070d892f
spec:
  progressDeadlineSeconds: 600
  replicas: 3
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: pacman
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: pacman
    spec:
      containers:
      - image: ghcr.io/diinoalmeida/pacman:2.0
        imagePullPolicy: IfNotPresent
        name: pacman
        ports:
        - containerPort: 8080
          protocol: TCP
        resources:
          requests:
            cpu: 100m
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 3
  conditions:
  - lastTransitionTime: "2024-02-20T11:49:20Z"
    lastUpdateTime: "2024-02-20T11:49:20Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2024-02-20T11:49:18Z"
    lastUpdateTime: "2024-02-21T13:59:51Z"
    message: ReplicaSet "pacman-67d76cc777" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 3
  readyReplicas: 3
  replicas: 3
  updatedReplicas: 3
