service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2024-02-20T13:31:29Z"
  labels:
    app: pacman
  name: pacman
  namespace: pacman
  resourceVersion: "5206"
  uid: 018f436b-b150-455c-b633-6141b38ea0bc
spec:
  clusterIP: 10.102.201.73
  clusterIPs:
  - 10.102.201.73
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: pacman
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
